--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -179,5 +179,40 @@ footer img {
     padding: 0 5px;
 }
 
+.map iframe{
+    width: 100%;
+}
 
+/*contact.html*/
+.employee-profiles {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    text-align: center;
+}
 
+.employee-profiles img {
+    width: 300px;
+    height: 230px;
+}
+.contact-form label,
+.contact-form input,
+.contact-form textarea,
+.contact-form button {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+.submit-button {
+    background-color: #0077cc;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.mockup {
+        text-align: right;
+        font-size: 0.8rem;
+
+}
